# EHYB_SPMV_GPU

./: Makefile  Partition.h  README.md  Solver_test.out  Solver_testO0.out  avg_ELL_number  convert.c  convert.h  fspai.c  fspai.h  gmres.c  gmres.hh  kernel.cu  kernel.h  ldsc.e167088  ldsc.o167088  mtmetis.h  pbs_example.pbs  reordering.c  reordering.h  solver.c  solver.h  solver.o167090  solver.o167091  solver.o167092  solver.o167093  solverGPU.c  solverGPU.cu  solver_omp.pbs  solver_test.c  spmv.cu  spmv.h  test.h  texture.h
lib/: libgsl.la  libgslcblas.la
mt-metis-0.6.0/: CMakeLists.txt  Changelog  LICENSE  Makefile  README.md  configure
mt-metis-0.6.0/domlib/: .dlht_funcs.h.swp  .dlpq_funcs.h.swp  .dlpq_headers.h.swp  LICENSE  dlbuffer_funcs.h  dlbuffer_headers.h  dlcb_funcs.h  dlcb_headers.h  dlcmdline.c  dlcmdline.h  dldebug.h  dldjset_funcs.h  dldjset_headers.h  dldpq_funcs.h  dldpq_headers.h  dlenv.c  dlenv.h  dlfile.c  dlfile.h  dlgklib.h  dlheap_funcs.h  dlheap_headers.h  dlht_funcs.h  dlht_headers.h  dliset_funcs.h  dliset_headers.h  dllcb_funcs.h  dllcb_headers.h  dllist_funcs.h  dllist_headers.h  dlmacros.h  dlmath_funcs.h  dlmath_headers.h  dlmem_funcs.h  dlmem_headers.h  dlmset_funcs.h  dlmset_headers.h  dlpq_funcs.h  dlpq_headers.h  dlprint.h  (+25 more)
mt-metis-0.6.0/include/: CMakeLists.txt
mt-metis-0.6.0/metis/: LICENSE.txt
mt-metis-0.6.0/metis/GKlib/: .error.c.swp  csr.c  error.c  fs.c  gk_mkmemory.h  gk_mkpqueue.h  gk_proto.h  io.c  mcore.c  memory.c  random.c  string.c
mt-metis-0.6.0/metis/GKlib/test/: CMakeLists.txt  grKx.c  rw.c
mt-metis-0.6.0/metis/include/: metis.h
mt-metis-0.6.0/metis/libmetis/: balance.c  checkgraph.c  coarsen.c  contig.c  debug.c  defs.h  fm.c  gklib_rename.h  graph.c  initpart.c  kmetis.c  kwayfm.c  kwayrefine.c  mcutil.c  minconn.c  ometis.c  options.c  parmetis.c  pmetis.c  proto.h  refine.c  rename.h  separator.c  sfm.c  srefine.c  stat.c  struct.h  timing.c  util.c  wspace.c
mt-metis-0.6.0/src/: .coarsen.c.swp  .flow.c.swp  .graph.c.swp  .partition.c.swp  CMakeLists.txt  aggregate.c  aggregate.h  base.h  check.c  check.h  coarsen.c  coarsen.h  contract.c  contract.h  ctrl.c  ctrl.h  eseprefine.c  eseprefine.h  esinfo.c  esinfo.h  graph.c  graph.h  imetis.c  imetis.h  initpart.c  initpart.h  kwayrefine.c  kwayrefine.h  kwinfo.c  kwinfo.h  macros.h  mtmetis.c  mtmetis_bin.c  order.c  order.h  partition.c  partition.h  project.c  project.h  refine.c  (+8 more)
mt-metis-0.6.0/src/test/: CMakeLists.txt  base_test.c  graph_test.c  test.c  test.h
mt-metis-0.6.0/wildriver/: CMakeLists.txt  ChangeLog  configure
mt-metis-0.6.0/wildriver/include/: CMakeLists.txt  wildriver.h
mt-metis-0.6.0/wildriver/src/: CMakeLists.txt  CSRFile.cpp  CSRFile.hpp  DenseMatrixFile.cpp  DenseMatrixFile.hpp  Exception.hpp  GraphFactory.cpp  GraphFactory.hpp  GraphFile.cpp  GraphFile.hpp  GraphInHandle.cpp  GraphInHandle.hpp  GraphOutHandle.cpp  GraphOutHandle.hpp  GraphTextFile.cpp  GraphTextFile.hpp  IDenseMatrixFile.hpp  IDenseMatrixReader.hpp  IDenseMatrixWriter.hpp  IGraphFile.hpp  IGraphReader.hpp  IGraphWriter.hpp  IMatrixFile.hpp  IMatrixReader.hpp  IMatrixWriter.hpp  IVectorFile.hpp  IVectorReader.hpp  IVectorWriter.hpp  Matrix.hpp  MatrixEntry.hpp  MatrixFactory.cpp  MatrixFactory.hpp  MatrixFile.cpp  MatrixFile.hpp  MatrixGraphFile.cpp  MatrixGraphFile.hpp  MatrixInHandle.cpp  MatrixInHandle.hpp  MatrixOutHandle.cpp  MatrixOutHandle.hpp  (+21 more)
mt-metis-0.6.0/wildriver/src/test/: CMakeLists.txt  CSRFile_test.cpp  DomTest.hpp  GraphInHandle_test.cpp  GraphOutHandle_test.cpp  MatrixOutHandle_test.cpp  MetisFile_test.cpp  PlainVectorFile_test.cpp  WildRiver_test.cpp
